5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1822_3181.log
== TEST (2019-06-13 10:30:56) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arrange(1:36)
g = zeros(35, dtype = int)
for i in range(35):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
print(g)
		
	
	
-- ERROR:
File "XXXX", line 4
    y = arrange(1:36)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:14) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arrange(1,36)
g = zeros(35, dtype = int)
for i in range(35):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:00) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arange(1,36)
g = zeros(35, dtype = int)
for i in range(35):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:48) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arange(1,36)
g = zeros(36, dtype = int)
for i in range(36):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:20) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arange(1,36)
g = zeros(35, dtype = int)
for i in range(36):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:50) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arange(36)
g = zeros(36, dtype = int)
for i in range(36):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:10) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arange(36)
g = zeros(36, dtype = int)
for i in range(36):
	if(j[x]==y[i]):
		g[i] = g[i]+1
		x=x+1
	print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:12) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
x = 0
y = arange(36)
g = zeros(36, dtype = int)
for i in range(36):
	if(j[x]==y[i]):
		g[i] = g[i]+1
	x=x+1
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:21) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
y = arange(36)
g = zeros(36, dtype = int)
for x in range(size(j))
	for i in range(36):
		if(j[x]==y[i]):
			g[i] = g[i]+1		
print(g)
		
	
	
-- ERROR:
File "XXXX", line 5
    for x in range(size(j))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:30) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
y = arange(36)
g = zeros(36, dtype = int)
for x in range(size(j)):
	for i in range(36):
		if(j[x]==y[i]):
			g[i] = g[i]+1		
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:39:50) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
y = arange(36)
g = zeros(36, dtype = int)
for x in range(size(j)):
	for i in range(36):
		if(j[x]==y[i]):
			g[i] = g[i]+1		
print(g)
		
	
	
-- EXECUTION TIME:
0.831474
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:58) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
y = arange(36)
g = zeros(36, dtype = int)
for x in range(size(j)):
	for i in range(36):
		if(j[x]==y[i]):
			g[i] = g[i]+1		
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:51) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
y = arange(37)
g = zeros(37, dtype = int)
for x in range(size(j)):
	for i in range(37):
		if(j[x]==y[i]):
			g[i] = g[i]+1		
print(g)
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:41:01) 
-- CODE:
from numpy import*
j = array(eval(input("ultima jogada: ")))
y = arange(37)
g = zeros(37, dtype = int)
for x in range(size(j)):
	for i in range(37):
		if(j[x]==y[i]):
			g[i] = g[i]+1		
print(g)
		
	
	
-- EXECUTION TIME:
0.861954
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
